feat: add promote user to artist backend| [#129]
